Associate target with pkg-config package

--- a/drake/common/CMakeLists.txt
+++ b/drake/common/CMakeLists.txt
@@ -79,7 +79,11 @@ drake_install_headers(${installed_headers})
 # Install the library and note Drake's dependency on it.
 pods_install_libraries(drakeCommon)
 drake_install_pkg_config_file(drake-common
-  LIBS -ldrakeCommon -lgflags ${CMAKE_THREAD_LIBS_INIT})
+  TARGET drakeCommon
+  LIBS
+    -ldrakeCommon
+    -lgflags
+    ${CMAKE_THREAD_LIBS_INIT})
 
 if(BUILD_TESTING)
   add_subdirectory(test)
