--- a/drake/lcm/CMakeLists.txt
+++ b/drake/lcm/CMakeLists.txt
@@ -56,6 +56,7 @@ drake_install_headers(
     ${lcm_independent_header_files})
 pods_install_libraries(drakeLcm)
 drake_install_pkg_config_file(drake-lcm
+    TARGET drakeLcm
     CFLAGS -I${CMAKE_INSTALL_PREFIX}/include
     LIBS -ldrakeLcm
     REQUIRES ${lcm_dependent_requires})
