--- a/drake/math/CMakeLists.txt
+++ b/drake/math/CMakeLists.txt
@@ -47,6 +47,7 @@ drake_install_headers(${installed_headers})
 
 pods_install_libraries(drakeMath)
 drake_install_pkg_config_file(drake-math
+  TARGET drakeMath
   LIBS -ldrakeMath
   REQUIRES drake-common)
 
