--- a/drake/systems/analysis/test/controlled_spring_mass_system/CMakeLists.txt
+++ b/drake/systems/analysis/test/controlled_spring_mass_system/CMakeLists.txt
@@ -8,6 +8,7 @@ pods_install_libraries(drakeControlledSpringMassSystemPlant)
 drake_install_headers(controlled_spring_mass_system.h)
 
 drake_install_pkg_config_file(drake-controlled-spring-mass-system-plant
+    TARGET drakeControlledSpringMassSystemPlant
     LIBS -ldrakeControlledSpringMassSystemPlant
     REQUIRES
       drake-spring-mass-system-plant
