--- a/drake/systems/plants/spring_mass_system/CMakeLists.txt
+++ b/drake/systems/plants/spring_mass_system/CMakeLists.txt
@@ -7,5 +7,6 @@ drake_install_headers(
     spring_mass_system.h)
 
 drake_install_pkg_config_file(drake-spring-mass-system-plant
+    TARGET drakeSpringMassSystemPlant
     LIBS -ldrakeSpringMassSystemPlant
     REQUIRES drake-system-framework)
