--- a/drake/automotive/CMakeLists.txt
+++ b/drake/automotive/CMakeLists.txt
@@ -55,6 +55,7 @@ drake_install_headers(
   # N.B. The gen/*.h headers are installed by gen/CMakeLists.txt.
   )
 drake_install_pkg_config_file(drake-automotive
+  TARGET drakeAutomotive
   LIBS -ldrakeAutomotive
   REQUIRES
     drake-common
@@ -88,6 +89,7 @@ if(lcm_FOUND)
     # N.B. The gen/*.h headers are installed by gen/CMakeLists.txt.
     )
   drake_install_pkg_config_file(drake-automotive-lcm
+    TARGET drakeAutomotiveLcm
     LIBS -ldrakeAutomotiveLcm
     REQUIRES
       drake-automotive
