--- a/drake/multibody/collision/CMakeLists.txt
+++ b/drake/multibody/collision/CMakeLists.txt
@@ -8,12 +8,12 @@ set(drakeCollision_SRC_FILES ${drakeCollision_SRC_FILES} unusable_model.cc)
 
 add_library_with_exports(LIB_NAME drakeCollision SOURCE_FILES ${drakeCollision_SRC_FILES})
 
-set(drakeCollision_REQUIRES)
+set(bullet_dependent_requires)
 if(Bullet_FOUND)
   target_compile_definitions(drakeCollision PUBLIC BULLET_COLLISION)
   target_include_directories(drakeCollision PUBLIC ${BULLET_INCLUDE_DIRS})
   target_link_libraries(drakeCollision ${BULLET_LIBRARIES})
-  set(drakeCollision_REQUIRES bullet)
+  set(bullet_dependent_requires bullet)
 endif()
 target_link_libraries(drakeCollision drakeShapes drakeCommon)
 
@@ -22,7 +22,7 @@ drake_install_headers(drake_collision.h point_pair.h element.h model.h)
 drake_install_pkg_config_file(drake-collision
   TARGET drakeCollision
   LIBS -ldrakeCollision
-  REQUIRES ${drakeCollision_REQUIRES})
+  REQUIRES ${bullet_dependent_requires})
 
 if(BUILD_TESTING)
   add_subdirectory(test)
