Remove non-library lcmtypes_bot2-core-cpp from .pc file

--- a/drake/util/CMakeLists.txt
+++ b/drake/util/CMakeLists.txt
@@ -18,8 +18,8 @@ if(lcm_FOUND)
     TARGET drakeLCMUtil
     LIBS
       -ldrakeLCMUtil
-      -llcmtypes_bot2-core-cpp
     REQUIRES
+      # TODO(jamiesnape): Upstream a lcmtypes_bot2-core-cpp.pc file
       drake-lcmtypes-cpp
       drake-trajectories)
 endif()
