Disable ODE support in dReal
We don't need ODE support in dReal right now, and turning it off turns
of CAPD, which is rather slow to build (autoreconf especially takes
quite some time).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ drake_add_external(ccd PUBLIC CMAKE
 
 # dreal
 drake_add_external(dreal PUBLIC CMAKE
-  CMAKE_ARGS -DUSE_NLOPT=OFF -DBUILD_TESTING=OFF
+  CMAKE_ARGS -DUSE_NLOPT=OFF -DBUILD_TESTING=OFF -DSUPPORT_ODE=OFF
   SOURCE_SUBDIR src)
 
 # gflags
