--- a/drake/examples/kuka_iiwa_arm/CMakeLists.txt
+++ b/drake/examples/kuka_iiwa_arm/CMakeLists.txt
@@ -33,7 +33,8 @@ if(lcm_FOUND)
         drake-lcm-system
         drake-lcmtypes-cpp
         drake-rbsystem
-        drake-shapes)
+        drake-shapes
+        eigen3)
 
   add_executable(run_kuka_iiwa_arm_dynamics run_kuka_iiwa_arm_dynamics.cc)
   target_link_libraries(run_kuka_iiwa_arm_dynamics
