--- a/drake/multibody/rigid_body_system1/CMakeLists.txt
+++ b/drake/multibody/rigid_body_system1/CMakeLists.txt
@@ -17,7 +17,7 @@ drake_install_pkg_config_file(drake-rbsystem
 if (lcm_FOUND)
   add_executable(rigidBodyLCMNode rigidBodyLCMNode.cpp)
   target_link_libraries(rigidBodyLCMNode gflags drakeRBSystem drakeLCMSystem Threads::Threads)
-  pods_install_executables(rigidBodyLCMNode)
+  drake_install_executables(TARGETS rigidBodyLCMNode)
   drake_install_headers(BotVisualizer.h)
 endif ()
 
