Adds hsrb_description as an optional submodule of Drake. (#3986)
* Added hsrb_description as an optional submodule of Drake.

* Merge branch 'master' of github.com:RobotLocomotion/drake into feature/add_hsrb_description

* Merge branch 'master' of github.com:RobotLocomotion/drake into feature/add_hsrb_description

* Modified hsrb_description to point to master.

* Modified hsrb_description submodule to be ON by default, which is possible now that it's open-source.

* Merge branch 'master' of github.com:RobotLocomotion/drake into feature/add_hsrb_description

* Modified URL of hsrb_description submodule.

* Removed ros_packages.cmake. Switched to use drake_add_external for adding hsrb_description.

* Merge branch 'feature/add_hsrb_description' of github.com:liangfok/drake into feature/add_hsrb_description

* Modified hsrb_description to not be ALWAYS. Updated source directory.

* Sorted optional externals in lexicographical order.

--- a/.gitmodules
+++ b/.gitmodules
@@ -96,3 +96,6 @@
 [submodule "externals/robotlocomotion_lcmtypes"]
 	path = externals/robotlocomotion_lcmtypes
 	url = https://github.com/RobotLocomotion/lcmtypes.git
+[submodule "ros/hsrb_description"]
+	path = ros/hsrb_description
+	url = https://github.com/ToyotaResearchInstitute/hsrb_description.git
