--- a/drake/automotive/BUILD
+++ b/drake/automotive/BUILD
@@ -12,8 +12,6 @@ cc_library(
         "gen/driving_command.cc",
         "gen/euler_floating_joint_state.cc",
         "gen/idm_planner_parameters.cc",
-        "gen/idm_with_trajectory_agent_parameters.cc",
-        "gen/idm_with_trajectory_agent_state.cc",
         "gen/simple_car_config.cc",
         "gen/simple_car_state.cc",
     ],
@@ -21,8 +19,6 @@ cc_library(
         "gen/driving_command.h",
         "gen/euler_floating_joint_state.h",
         "gen/idm_planner_parameters.cc",
-        "gen/idm_with_trajectory_agent_parameters.h",
-        "gen/idm_with_trajectory_agent_state.h",
         "gen/simple_car_config.h",
         "gen/simple_car_state.h",
     ],
@@ -34,14 +30,12 @@ cc_library(
     srcs = [
         "gen/driving_command_translator.cc",
         "gen/euler_floating_joint_state_translator.cc",
-        "gen/idm_with_trajectory_agent_state_translator.cc",
         "gen/simple_car_config_translator.cc",
         "gen/simple_car_state_translator.cc",
     ],
     hdrs = [
         "gen/driving_command_translator.h",
         "gen/euler_floating_joint_state_translator.h",
-        "gen/idm_with_trajectory_agent_state_translator.h",
         "gen/simple_car_config_translator.h",
         "gen/simple_car_state_translator.h",
     ],
@@ -64,20 +58,13 @@ cc_library(
     name = "linear_car",
     srcs = ["linear_car.cc"],
     hdrs = ["linear_car.h"],
-    deps = DEPS,
+    deps = DEPS + ["//drake/common:symbolic"],
     linkstatic = 1)
 
 cc_library(
     name = "idm_planner",
     srcs = ["idm_planner.cc"],
     hdrs = ["idm_planner.h"],
-    deps = DEPS,
-    linkstatic = 1)
-
-cc_library(
-    name = "idm_with_trajectory_agent",
-    srcs = ["idm_with_trajectory_agent.cc"],
-    hdrs = ["idm_with_trajectory_agent.h"],
     deps = DEPS + ["//drake/common:symbolic"],
     linkstatic = 1)
 
@@ -92,7 +79,7 @@ cc_library(
     name = "single_lane_ego_and_agent",
     srcs = ["single_lane_ego_and_agent.cc"],
     hdrs = ["single_lane_ego_and_agent.h"],
-    deps = DEPS,
+    deps = DEPS + ["//drake/common:symbolic"],
     linkstatic = 1)
 
 cc_library(
