Add joint position and velocity getters to KinematicsResults, as well as methods for getting pose and twist with respect to world.
clang-format.

Make it possible to construct a KinematicsResults object without a RigidBodyPlant.

Add port descriptor getters to RigidBodyPlant.

Add RobotCommandToDesiredEffortConverter.

Add RobotStateEncoder.

Add ActuatorEffortToRigidBodyPlantInputConverter.

Add valkyrie_simulation.

Add RobotStateDecoder.

Add RobotStateEncoder/RobotStateDecoder test.

Add RobotCommandToDesiredEffortConverterTest.

Address comment: add note.

Address comment: handle case where robot_state_t message has state information for joints that RobotStateDecoder doesn't know about.

Address comment: switch order of arguments.

Address comment: remove commented out code.

Address comment: make wrench indices static const members of RobotStateEncoder, use in test.

Address comment: add method for twist in world aligned body frame.

rebase

added some guards for uninit lcm robot state message.

--- a/drake/examples/Valkyrie/CMakeLists.txt
+++ b/drake/examples/Valkyrie/CMakeLists.txt
@@ -10,6 +10,63 @@ endif()
 
 drake_add_matlab_test(NAME examples/Valkyrie/runValkyrieVisualize OPTIONAL bullet gurobi snopt COMMAND runValkyrieVisualize)
 
+if (lcm_FOUND)
+  add_library_with_exports(LIB_NAME drakeRobotCommandToDesiredEffortConverter SOURCE_FILES
+      robot_command_to_desired_effort_converter.cc)
+  target_link_libraries(drakeRobotCommandToDesiredEffortConverter
+      drakeLCMSystem2)
+  pods_install_libraries(drakeRobotCommandToDesiredEffortConverter)
+  drake_install_headers(robot_command_to_desired_effort_converter.h)
+
+  add_library_with_exports(LIB_NAME drakeActuatorEffortToRigidBodyPlantInputConverter SOURCE_FILES
+      actuator_effort_to_rigid_body_plant_input_converter.cc)
+  target_link_libraries(drakeActuatorEffortToRigidBodyPlantInputConverter
+      drakeLCMSystem2)
+  pods_install_libraries(drakeActuatorEffortToRigidBodyPlantInputConverter)
+  drake_install_headers(actuator_effort_to_rigid_body_plant_input_converter.h)
+
+  add_library_with_exports(LIB_NAME drakeRobotStateLcmTypeUtil SOURCE_FILES
+      robot_state_lcmtype_util.cc)
+  target_link_libraries(drakeRobotStateLcmTypeUtil
+      drakeRigidBodyPlant
+      )
+  pods_install_libraries(drakeRobotStateLcmTypeUtil)
+  drake_install_headers(robot_state_lcmtype_util.h)
+
+  add_library_with_exports(LIB_NAME drakeRobotStateEncoder SOURCE_FILES
+      robot_state_encoder.cc)
+  target_link_libraries(drakeRobotStateEncoder
+      drakeLCMSystem2
+      drakeLCMUtil
+      drakeRigidBodyPlant
+      drakeSide
+      drakeRobotStateLcmTypeUtil
+      )
+  pods_install_libraries(drakeRobotStateEncoder)
+  drake_install_headers(robot_state_encoder.h)
+
+  add_library_with_exports(LIB_NAME drakeRobotStateDecoder SOURCE_FILES
+      robot_state_decoder.cc)
+  target_link_libraries(drakeRobotStateDecoder
+      drakeLCMSystem2
+      drakeLCMUtil
+      drakeRigidBodyPlant
+      drakeRobotStateLcmTypeUtil
+      )
+  pods_install_libraries(drakeRobotStateDecoder)
+  drake_install_headers(robot_state_decoder.h)
+
+  add_executable(valkyrie_simulation valkyrie_simulation.cc)
+  target_link_libraries(valkyrie_simulation
+      drakeRigidBodyPlant
+      drakeLCMSystem2
+      drakeRobotStateEncoder
+      drakeSystemAnalysis
+      drakeSystemFramework
+      drakeActuatorEffortToRigidBodyPlantInputConverter
+      drakeRobotCommandToDesiredEffortConverter)
+endif()
+
 if(BUILD_TESTING)
   add_subdirectory(test)
 endif()
