--- a/drake/systems/controllers/CMakeLists.txt
+++ b/drake/systems/controllers/CMakeLists.txt
@@ -1,5 +1,11 @@
-drake_install_headers(
-  LQR.h)
+
+add_library_with_exports(LIB_NAME drakeLinearControl SOURCE_FILES linear_optimal_control.cc)
+target_link_libraries(drakeLinearControl drakeSystemFramework)
+pods_install_libraries(drakeLinearControl)
+drake_install_headers(linear_optimal_control.h)
+drake_install_pkg_config_file(drake-linear-control
+  TARGET drakeLinearControl
+  LIBS -ldrakeLinearControl)
 
 add_library_with_exports(LIB_NAME drakeControlUtil SOURCE_FILES controlUtil.cpp)
 target_link_libraries(drakeControlUtil drakeRBM drakeTrajectories)
