--- a/drake/common/CMakeLists.txt
+++ b/drake/common/CMakeLists.txt
@@ -32,9 +32,9 @@ set(installed_headers
   autodiff_overloads.h
   constants.h
   drake_assert.h
+  drake_compat.h
   drake_deprecated.h
   drake_export.h
-  drake_gcc48.h
   drake_path.h
   drake_throw.h
   eigen_autodiff_types.h
