--- a/drake/multibody/rigid_body_plant/CMakeLists.txt
+++ b/drake/multibody/rigid_body_plant/CMakeLists.txt
@@ -1,14 +1,16 @@
-set(source_files kinematics_results.cc rigid_body_plant.cc
+set(source_files
     contact_detail.cc
     contact_force.cc
     contact_info.cc
     contact_resultant_force_calculator.cc
     contact_results.cc
+    kinematics_results.cc
     point_contact_detail.cc
-    )
+    rigid_body_plant.cc)
 
 # The following variables are necessary to conditionally include
-# RigidBodyTreeLcmPublisher in libdrakeRigidBodyPlant.so if LCM exists.
+# DrakeVisualizer and ViewerDrawTranslator in libdrakeRigidBodyPlant.so if LCM
+# exists.
 set(lcm_dependent_header_files)
 if (lcm_FOUND)
   set(lcm_dependent_header_files
@@ -26,14 +28,13 @@ endif ()
 set(lcm_dependent_link_libraries)
 set(lcm_dependent_requires)
 if (lcm_FOUND)
-  set(lcm_dependent_link_libraries
-    drakeLCMSystem2)
+  set(lcm_dependent_link_libraries drakeLCMSystem2)
   set(lcm_dependent_requires drake-lcm-system2)
 endif ()
 
 add_library_with_exports(LIB_NAME drakeRigidBodyPlant SOURCE_FILES
-  ${source_files}
-  ${lcm_dependent_source_files})
+  ${lcm_dependent_source_files}
+  ${source_files})
 target_link_libraries(drakeRigidBodyPlant
   ${lcm_dependent_link_libraries}
   drakeCommon
@@ -43,12 +44,12 @@ target_link_libraries(drakeRigidBodyPlant
 
 drake_install_headers(
     ${lcm_dependent_header_files}
-    kinematics_results.h rigid_body_plant.h
     contact_detail.h
     contact_force.h
-    contact_results.h
     contact_info.h
-    )
+    contact_results.h
+    kinematics_results.h
+    rigid_body_plant.h)
 
 pods_install_libraries(drakeRigidBodyPlant)
 drake_install_pkg_config_file(drake-rigid-body-plant
@@ -56,12 +57,12 @@ drake_install_pkg_config_file(drake-rigid-body-plant
   CFLAGS -I${CMAKE_INSTALL_PREFIX}/include
   LIBS -ldrakeRigidBodyPlant
   REQUIRES
+    ${lcm_dependent_requires}
     drake-common
     drake-optimization
     drake-rbm
     drake-system-framework
-    eigen3
-    ${lcm_dependent_requires})
+    eigen3)
 
 if(BUILD_TESTING)
   add_subdirectory(test)
