--- a/drake/automotive/test/CMakeLists.txt
+++ b/drake/automotive/test/CMakeLists.txt
@@ -1,6 +1,9 @@
 drake_add_cc_test(curve2_test)
 target_link_libraries(curve2_test drakeAutomotive)
 
+#drake_add_cc_test(endless_road_traffic_car_test)
+#target_link_libraries(endless_road_traffic_car_test drakeAutomotive)
+
 drake_add_cc_test(simple_car_test)
 target_link_libraries(simple_car_test drakeAutomotive)
 
@@ -13,11 +16,11 @@ target_link_libraries(trajectory_car_test drakeAutomotive)
 drake_add_cc_test(linear_car_test)
 target_link_libraries(linear_car_test drakeAutomotive)
 
-drake_add_cc_test(idm_planner_test)
-target_link_libraries(idm_planner_test drakeAutomotive)
+#drake_add_cc_test(idm_planner_test)
+#target_link_libraries(idm_planner_test drakeAutomotive)
 
-drake_add_cc_test(single_lane_ego_and_agent_test)
-target_link_libraries(single_lane_ego_and_agent_test drakeAutomotive)
+#drake_add_cc_test(single_lane_ego_and_agent_test)
+#target_link_libraries(single_lane_ego_and_agent_test drakeAutomotive)
 
 if(lcm_FOUND)
   drake_add_cc_test(simple_car_state_translator_test)
